# ros_x_habitat

./: .gitignore  CMakeLists.txt  package.xml  setup.py
msg/: DepthImage.msg
ros_x_habitat/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_x_habitat/configs/: new_pointnav_habitat_test.yaml  pointnav_d_original.yaml
ros_x_habitat/configs/setting_2_configs/: pointnav_rgbd-mp3d.yaml
ros_x_habitat/launch/: debug_habitat_env_launch.xml  habitat_agent_in_gazebo_launch.xml
ros_x_habitat/ros_configs/: habitat_agent_in_gazebo.rviz
ros_x_habitat/ros_x_habitat/envs/: habitat_eval_rlenv.py  habitat_rlenv.py  physics_env.py
ros_x_habitat/ros_x_habitat/evaluators/: habitat_evaluator.py  habitat_ros_evaluator.py  habitat_sim_evaluator.py
ros_x_habitat/ros_x_habitat/measures/: top_down_map_for_roam.py
ros_x_habitat/ros_x_habitat/nodes/: dummy_ptgoal_with_gps_compass_subscriber.py  gazebo_to_habitat_agent.py  habitat_agent_node.py  habitat_agent_to_gazebo.py  habitat_env_node.py  joy_controller.py
ros_x_habitat/ros_x_habitat/roamers/: joy_habitat_roamer.py
ros_x_habitat/ros_x_habitat/scripts/: compare_metrics.py  eval_and_vis_habitat.py  eval_habitat_ros.py  roam_with_joy.py  visualize_episodes.py  visualize_metrics_from_configs.py  visualize_variability_from_seeds.py
ros_x_habitat/ros_x_habitat/sims/: habitat_physics_simulator.py
ros_x_habitat/ros_x_habitat/tasks/: habitat_physics_task.py
ros_x_habitat/ros_x_habitat/test/test_habitat/: test_habitat_evaluator_continuous.py  test_habitat_evaluator_discrete.py
ros_x_habitat/ros_x_habitat/test/test_habitat_ros/: mock_agent_node.py  mock_env_node.py  mock_habitat_ros_evaluator.py  test_habitat_ros_agent_node_discrete.py  test_habitat_ros_env_node_continuous.py  test_habitat_ros_env_node_discrete.py  test_habitat_ros_evaluator_discrete.py
ros_x_habitat/ros_x_habitat/test/test_visualization/: test_visualization.py
ros_x_habitat/ros_x_habitat/utils/: utils_files.py  utils_logging.py  utils_visualization.py
ros_x_habitat_interfaces/: CMakeLists.txt  package.xml
ros_x_habitat_interfaces/msg/: PointGoalWithGPSCompass.msg
