<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_x_habitat</name>
  <version>0.0.1</version>
  <description>A bridge interface between Habitat Reinforcement learning simulator and ROS 2</description>
  <maintainer email="RemonComputer@gmail.com">Remon Gabra</maintainer>
  <license>CC-BY-4.0</license>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>ros_x_habitat_interfaces</build_depend> -->
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <!-- <build_export_depend>ros_x_habitat_interfaces</build_export_depend> -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <!-- <exec_depend>ros_x_habitat_interfaces</exec_depend> -->
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-seaborn</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <!-- Launch files dependencies-->
  <exec_depend>joy</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <!-- nav2_bt_navigator: replaces move_base, TODO: you might need to remove the config file of move base 
  and reiterate on packages-->
  <exec_depend>nav2_bt_navigator</exec_depend>                           
  <exec_depend>rviz2</exec_depend>
  <!-- turtlebot3_navigation2: replaces turtlebot3_navigation -->
  <exec_depend>turtlebot3_navigation2</exec_depend>                      
  <!-- laser_scan_matcher: unsupported -->
  <!-- hector_geotiff: unsupported
  hector_slam_launch: unsupported
  hector_mapping: unsupported
  nodelet: unsupported
  rosservice: unsupported
  hector_trajectory_server: unsupported -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
